Cosmetic refactoring a bit

--- a/src/main/resources/templates/createexpense.html
+++ b/src/main/resources/templates/createexpense.html
@@ -61,7 +61,9 @@
                </div><br />
                 <br />
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <a class="text-decoration-none" th:href="${previouspage}">
+                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    </a>
                     <button type="submit" class="btn btn-primary">Create</button>
                 </div>
             </form>
