--- a/src/main/resources/templates/expenselistdetails.html
+++ b/src/main/resources/templates/expenselistdetails.html
@@ -38,8 +38,8 @@
     <hr class="col-md-4 offset-md-4 border-2 border-top border-warning mt-3">
     <h2 class="text-center text-warning">All expenses</h2>
       <a class="text-decoration-none" th:href="@{/createexpense/{id}(id=${id})}">
-        <button type="button" class="btn btn-labeled btn-rounded btn-amber" title="Add an expense to this list">
-          <span class="btn-label"><i class="bi-plus-circle-fill"></i></span></button>
+        <button type="button" class="btn btn-labeled btn-rounded btn-warning text-white" title="Add an expense to this list">
+          <span class="btn-label"><i class="bi bi-plus-circle"></i></span></button>
       </a>
 <!--    <th:block >-->
       <div class="row mt-5">
