--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -2,6 +2,16 @@ body {
 	
 }
 
+section {
+	min-height: 100%;
+	margin-bottom: -50px;
+}
+
+.footer{
+	height: 50px;
+	text-align: center;
+}
+
 hr:last-child {
 	visibility: hidden;
 }
