--- a/src/main/resources/static/css/style_menu.css
+++ b/src/main/resources/static/css/style_menu.css
@@ -1,5 +1,4 @@
 
-
 .collapse{
     width: 15rem;
 }
@@ -12,6 +11,60 @@ text-align: center;
     text-decoration: none;
 }
 
-.footer{
-    text-align: center;
+
+/**
+    Menu attempt
+*/
+body {
+    font-family: "Lato", sans-serif;
+}
+
+.menuaccess {
+    color:#ffc107;
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    font-size:30px;
+    cursor:pointer
+}
+
+.sidenav {
+    height: 100%;
+    width: 12%;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #0d6efd;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+}
+
+.sidenav a {
+    margin-left: 10px;
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 18px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
+
+.sidenav a:hover {
+    color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+    color: #818181;
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+
+@media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
 }
