Bootstrap or bootcrap ?

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -6,13 +6,15 @@
     <footer class="footer" th:fragment="tail">
         <h6 class="text-center text-warning text-bold"> Tricount Corporate<br> Wild code school 2021</h6>
       <script>
-        function closeNav() {
-          document.getElementById("mySidenav").style.width = "0";
-        }
         function openNav() {
           document.getElementById("mySidenav").style.width = "15%";
         }
+        function closeNav() {
+          document.getElementById("mySidenav").style.width = "0";
+        }
       </script>
+      <script src="/js/jquery-3.2.1.slim.min.js"></script>
+      <script src="/bootstrap/js/bootstrap.min.js"></script>
     </footer>
 </body>
 
