--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,20 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
-	<head>
-		<title>TriCount</title>
-		<meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
-		<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
-		<link rel="stylesheet" href="/bootstrap/css/icons/bootstrap-icons.css">
-		<link rel="stylesheet" href="/css/style.css">
-		<script src="/js/jquery-3.2.1.slim.min.js"></script>
-		<script src="/js/bootstrap.min.js"></script>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+	<head th:replace="fragments/header.html :: head">
 	</head>
-
 	<body>
-	<header th:replace="fragments/header.html :: head"></header>
+	<header th:replace="fragments/header.html :: header"></header>
 	<section>
-		<div id="content" class="p-4 p-md-5 pt-5">
+		<th id="content" class="p-4 p-md-5 pt-5">
 			<h1 class="text-center text-primary m-4">All shared expenses</h1>
 
 			<th:block th:each="expenses, state : ${expenseslistsdto}">
@@ -37,7 +28,6 @@
 						</div>
 					</div>
 				</div>
-
 				<div class="row mt-5">
 					<div class="col-md-8 offset-md-2 col-xs-10 offset-xs-1">
 						<h2 class="text-center text-warning" th:text="${expenses.name}"></h2>
@@ -61,6 +51,7 @@
 									<th>Last expenses</th>
 									<th>Made by</th>
 									<th>Amount</th>
+									<th>View</th>
 								</tr>
 							</thead>
 							<tbody>
@@ -68,20 +59,33 @@
 									<td th:text="${expense.name}">Expense Name</td>
 									<td th:text="${expense.owner.name}">Expense owner</td>
 									<td th:text="${expense.amount}">Expense amount</td>
+									<td>
+										<a class="text-decoration-none" th:href="@{/expense/{id}(id=${expense.id})}">
+											<button type="button" class="btn btn-labeled btn-success">
+												<span class="btn-label"><i class="bi-binoculars-fill"></i></span></button>
+										</a>
+									</td>
 								</tr>
 							</tbody>
 						</table>
 						<div class="align-items-end">
 							<a class="text-decoration-none" th:href="@{/createexpense/{id}(id=${expenses.id})}">
 								<button type="button" class="btn btn-labeled btn-rounded btn-warning text-white" title="Add an expense to this list">
-									<span class="btn-label"><i class="bi-plus-circle-fill"></i> Add an expense</span></button>
+									<span class="btn-label"><i class="bi-plus-circle-fill"></i> Add an expense</span>
+								</button>
 							</a>
 						</div>
-	<!--					<button type="button" class="btn btn-lg btn-primary float-end">Add expense</button>-->
 					</div>
 				</div>
+			</th:block>
+			<hr class="col-md-4 offset-md-4 border-2 border-top border-warning mt-3"><br />
+			<div>
+				<a class="text-decoration-none" href="/createlist">
+					<button type="button" class="btn btn-labeled btn-rounded btn-light text-white" title="Create expense list">
+						<span class="btn-label"><i class="bi-plus-circle-fill"></i>Create a shared expense list</span>
+					</button>
+				</a>
 			</div>
-				<hr class="col-md-4 offset-md-4 border-2 border-top border-warning mt-3">
 		</div>
 	</section>
 
@@ -91,7 +95,6 @@
 			$(this).find('.btn-ok').attr('href', $(e.relatedTarget).data('href'));
 		});
 	</script>
-
 	<footer class="footer" th:replace="fragments/footer.html :: tail"></footer>
 	</body>
 </html>
