--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <footer class="footer" th:fragment="tail">
-        <h6 class="text-center text-warning text-bold"> Tricount Corporate<br> Wild code school 2021</h6>
+      <p class="text-center text-warning text-bold"> Tricount Corporate<br> Wild code school 2021</p>
       <script>
         function openNav() {
           document.getElementById("mySidenav").style.width = "15%";
@@ -13,10 +13,11 @@
           document.getElementById("mySidenav").style.width = "0";
         }
       </script>
+      <script src="/js/tom-select.complete.js"></script>
       <script src="/js/jquery-3.2.1.slim.min.js"></script>
       <script src="/bootstrap/js/bootstrap.min.js"></script>
       <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
-      <script src="/js/tom-select.complete.js"></script>
+      <script src="https://kit.fontawesome.com/8e8aa578fc.js" crossorigin="anonymous"></script>
     </footer>
 </body>
 
