--- a/src/main/resources/templates/createexpenselist.html
+++ b/src/main/resources/templates/createexpenselist.html
@@ -27,6 +27,6 @@
         </form>
     </div>
 </section>
-<footer class="footer" th:replace="fragments/footer.html :: tail"> your footer here</footer>
+<footer class="footer" th:replace="fragments/footer.html :: tail"></footer>
 </body>
 </html>
