--- a/src/main/resources/templates/contacts.html
+++ b/src/main/resources/templates/contacts.html
@@ -1,18 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
-<head>
-	<title>TriCount</title>
-	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
-	<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" href="/bootstrap/css/icons/bootstrap-icons.css">
-	<link rel="stylesheet" href="/css/style.css">
-	<script src="bootstrap/js/bootstrap.bundle.min.js"></script>
-	<script src="bootstrap/js/bootstrap.min.js"></script>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+<head th:replace="fragments/header.html :: head">
 </head>
 <body>
-<header th:replace="fragments/header.html :: head"></header>
-
+<header th:replace="fragments/header.html :: header"></header>
+	<section>
 	<h1 class="text-center text-primary m-4">Manage Contacts</h1>
 	<div class = "row mr-1">
 		<div class="col-md-12 text-center">
@@ -151,7 +143,7 @@
 	</th:block>
 
 
-<footer class="footer" th:replace="fragments/footer.html :: tail"> your footer here</footer>
+		<footer class="footer" th:replace="fragments/footer.html :: tail"></footer>
 
 </body>
 </html>
