Fixed Tom select issue, FYI got to put the script code in the footer and no longer in the pages

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -18,6 +18,14 @@
       <script src="/bootstrap/js/bootstrap.min.js"></script>
       <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
       <script src="https://kit.fontawesome.com/8e8aa578fc.js" crossorigin="anonymous"></script>
+      <script>
+        var config = {};
+        new TomSelect('#contacts',config);
+      </script>
+      <script>
+        var config = {};
+        new TomSelect('#beneficiaries',config);
+      </script>
     </footer>
 </body>
 
