Changed menu so it won't show itself everytime, also removed the transition so it's not weird when it closes. Fixed bug on expenselist deletion confirmation modal, fixed warnings in console while moving TomSelect configs under the footers imports on pages where the lib is required

--- a/src/main/resources/templates/createexpenselist.html
+++ b/src/main/resources/templates/createexpenselist.html
@@ -24,5 +24,9 @@
     </div>
 </section>
 <footer class="footer" th:replace="fragments/footer.html :: tail"></footer>
+<script>
+    var config = {};
+    new TomSelect('#contacts',config);
+</script>
 </body>
 </html>
