--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -12,20 +12,13 @@
         function closeNav() {
           document.getElementById("mySidenav").style.width = "0";
         }
+        closeNav();
       </script>
-      <script src="/js/tom-select.complete.js"></script>
       <script src="/js/jquery-3.2.1.slim.min.js"></script>
       <script src="/bootstrap/js/bootstrap.min.js"></script>
-      <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
+      <script src="/bootstrap/js/bootstrap.bundle.min.js"></script>
       <script src="https://kit.fontawesome.com/8e8aa578fc.js" crossorigin="anonymous"></script>
-      <script>
-        var config = {};
-        new TomSelect('#contacts',config);
-      </script>
-      <script>
-        var config = {};
-        new TomSelect('#beneficiaries',config);
-      </script>
+      <script src="/js/tom-select.complete.js"></script>
     </footer>
 </body>
 
