--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,28 +7,29 @@
 	<section>
 		<th id="content" class="p-4 p-md-5 pt-5">
 			<h1 class="text-center text-primary m-4">All shared expenses</h1>
-			<div>
+			<div class="text-center">
 				<a class="text-decoration-none" href="/createlist">
-					<button type="button" class="btn btn-labeled btn-rounded btn-light text-white" title="Create expense list">
-						<span class="btn-label"><i class="bi-plus-circle-fill"></i>Create a shared expense list</span>
+					<button type="button" class="btn btn-labeled btn-rounded btn-info text-white" title="Create expense list">
+						<span class="btn-label"><i class="bi-plus-circle-fill"></i> Create a shared expense list</span>
 					</button>
 				</a>
 			</div>
+			<hr class="col-md-4 offset-md-4 border-2 border-top border-warning mt-3"><br />
 			<th:block th:each="expenses, state : ${expenseslistsdto}">
 	<!--			Bootstrap modal div for confirmation windows pop-up -->
 				<div class="modal fade" id="confirm-delete" tabindex="-1" role="dialog" aria-labelledby="deleteListLabel" aria-hidden="true">
 					<div class="modal-dialog">
 						<div class="modal-content">
 							<div class="modal-header">
-								<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-								<h4 class="modal-title" id="deleteListLabel">Confirm Delete</h4>
+								<h5 class="modal-title" id="deleteListLabel">Confirm Delete</h5>
+								<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 							</div>
 							<div class="modal-body">
 								<p>You are about to delete an expense list, this action cannot be undone.</p>
 								<p>Do you want to proceed?</p>
 							</div>
 							<div class="modal-footer">
-								<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+								<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
 								<a class="btn btn-danger btn-ok">Delete</a>
 							</div>
 						</div>
@@ -46,7 +47,7 @@
 								<button type="button" class="btn btn-labeled btn-primary">
 									<span class="btn-label"><i class="bi-binoculars-fill"></i> List details</span></button>
 							</a>
-							<a class="text-decoration-none" th:data-href="@{/expenseslist/delete/{idList}(idList=${expenses.id})}" data-toggle="modal" data-target="#confirm-delete">
+							<a class="text-decoration-none" th:data-href="@{/expenseslist/delete/{idList}(idList=${expenses.id})}" data-bs-toggle="modal" data-bs-target="#confirm-delete">
 								<button type="button" class="btn btn-labeled btn-danger">
 									<span class="btn-label"><i class="bi-trash"></i> Delete List</span></button>
 							</a>
@@ -88,13 +89,14 @@
 		</div>
 	</section>
 
-<!--	bit of jquery to show the confirmation pop-up -->
-	<script>
-		$('#confirm-delete').on('show.bs.modal', function(e) {
-			$(this).find('.btn-ok').attr('href', $(e.relatedTarget).data('href'));
-		});
-	</script>
 	<footer class="footer" th:replace="fragments/footer.html :: tail"></footer>
+	<!--	bit of jquery to show the confirmation pop-up -->
+<!--	<script>-->
+<!--		$('#confirm-delete').on('show.bs.modal', function(e) {-->
+<!--			console.log("Coucou");-->
+<!--			$(this).find('.btn-ok').attr('href', $(e.relatedTarget).data('href'));-->
+<!--		});-->
+<!--	</script>-->
 	</body>
 </html>
 
