--- a/src/main/resources/static/css/style_menu.css
+++ b/src/main/resources/static/css/style_menu.css
@@ -1,4 +1,3 @@
-
 .collapse{
     width: 15rem;
 }
@@ -19,6 +18,14 @@ body {
     font-family: "Lato", sans-serif;
 }
 
+header {
+    position: sticky;
+    top: 0;
+    width: 100%;
+    height: 18%;
+    z-index:1000;
+}
+
 .menuaccess {
     color:#ffc107;
     position: fixed;
@@ -37,8 +44,7 @@ body {
     left: 0;
     background-color: #0d6efd;
     overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 60px;
+    padding-top: 80px;
 }
 
 .sidenav a {
@@ -48,18 +54,17 @@ body {
     font-size: 18px;
     color: #818181;
     display: block;
-    transition: 0.3s;
 }
 
 .sidenav a:hover {
-    color: #f1f1f1;
+    color: white;
 }
 
 .sidenav .closebtn {
-    color: #818181;
+    color: #ffc107;
     position: absolute;
     top: 0;
-    right: 25px;
+    right: 15px;
     font-size: 36px;
     margin-left: 50px;
 }
