--- a/src/main/resources/templates/createexpense.html
+++ b/src/main/resources/templates/createexpense.html
@@ -87,7 +87,7 @@
 					
 					<br />
 					<div class="modal-footer">
-						<a href="/" class="btn secondary" role="button">Cancel</a>
+						<a href="/" class="btn btn-secondary" role="button">Cancel</a>
 						<button type="submit" class="btn btn-primary">Create</button>
 					</div>
 					<br>
@@ -95,5 +95,9 @@
 		</div>
 	</section>
 		<footer class="footer" th:replace="fragments/footer.html :: tail"></footer>
+		<script>
+			var config = {};
+			new TomSelect('#beneficiaries',config);
+		</script>
 </body>
 </html>
