--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -14,14 +14,14 @@
 
 <body>
 <header th:fragment="header">
-    <div class="pos-f-t bootstrap navbar-dark bg-primary">
+    <div class="n navbar-dark bg-primary">
         <span class="menuaccess" onclick="openNav()">&#9776; Menu</span>
         <a href="/" class="pageTitleLink"><h1 class="pageTitle text-warning">TriCount<br>Manage your money</h1></a>
     </div>
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <ul class="navbar-nav">
-            <li class="nav-item "><a class="nav-link text-warning font-weight-bold" href="/"><i class="fas fa-home"></i><span class="navbar-title"> Home</span></a></li>
+            <li class="nav-item"><a class="nav-link text-warning font-weight-bold" href="/"><i class="fas fa-home"></i><span class="navbar-title"> Home</span></a></li>
             <li class="nav-item"><a class="nav-link text-warning font-weight-bold" href="/createlist"><i class="fas fa-plus"></i><span class="navbar-title"> Create expenses list</span></a></li>
             <li class="nav-item"><a class="nav-link text-warning font-weight-bold" href="/contacts"><i class="fas fa-users"></i><span class="navbar-title"> Manage Contacts</span> </a></li>
         </ul>
