--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
 	<body>
 	<header th:replace="fragments/header.html :: header"></header>
 	<section>
-		<th id="content" class="p-4 p-md-5 pt-5">
+		<div id="content" class="p-4 p-md-5 pt-5">
 			<h1 class="text-center text-primary m-4">All shared expenses</h1>
 			<div class="text-center">
 				<a class="text-decoration-none" href="/createlist">
