--- a/src/main/resources/templates/createexpenselist.html
+++ b/src/main/resources/templates/createexpenselist.html
@@ -20,6 +20,7 @@
             </select>
             <br /><br />
             <input type="submit" value="Create List" class="btn btn-primary">
+            <a th:href="${previous}" class="btn btn-secondary" role="button">Cancel</a>
         </form>
     </div>
 </section>
