--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -16,7 +16,7 @@
 <header th:fragment="header">
     <div class="n navbar-dark bg-primary">
         <span class="menuaccess" onclick="openNav()">&#9776; Menu</span>
-        <a href="/" class="pageTitleLink"><h1 class="pageTitle text-warning">TriCount<br>Manage your money</h1></a>
+        <a href="/" class="pageTitleLink"><h1 class="pageTitle text-warning">TriCount<br>Share your expenses</h1></a>
     </div>
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
