--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -25,3 +25,7 @@ Some buttons css
 .btn-label {position: relative;display: inline-block;padding: 6px 12px;border-radius: 4px 0 0 4px;}
 .btn-labeled {padding-top: 0;padding-bottom: 0;}
 .btn { margin-bottom:10px; }
+
+h2 {
+	margin-bottom: 25px;
+}
