--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -39,17 +39,17 @@
 					<div class="col-md-8 offset-md-2 col-xs-10 offset-xs-1">
 						<h2 class="text-center text-warning" th:text="${expenses.name}"></h2>
 						<h4 class="text-center">
-							<a class="text-decoration-none" th:href="@{/updatelist/{id}(id=${expenses.id})}">
-								<button type="button" class="btn btn-labeled btn-success">
-									<span class="btn-label"><i class="bi-pencil"></i> Edit List</span></button>
-							</a>
 							<a class="text-decoration-none" th:href="@{/expenselistdetails/{id}(id=${expenses.id})}">
-								<button type="button" class="btn btn-labeled btn-primary">
-									<span class="btn-label"><i class="bi-binoculars-fill"></i> List details</span></button>
+								<button type="button" class="btn btn-labeled btn-success">
+									<span class="btn-label"><i class="bi-pencil"></i></span></button>
 							</a>
+<!--							<a class="text-decoration-none" th:href="@{/expenselistdetails/{id}(id=${expenses.id})}">-->
+<!--								<button type="button" class="btn btn-labeled btn-primary">-->
+<!--									<span class="btn-label"><i class="bi-binoculars-fill"></i> List details</span></button>-->
+<!--							</a>-->
 							<a class="text-decoration-none" th:data-href="@{/expenseslist/delete/{idList}(idList=${expenses.id})}" data-bs-toggle="modal" data-bs-target="#confirm-delete">
 								<button type="button" class="btn btn-labeled btn-danger">
-									<span class="btn-label"><i class="bi-trash"></i> Delete List</span></button>
+									<span class="btn-label"><i class="bi-trash"></i></span></button>
 							</a>
 						</h4>
 						<table class="table table-striped">
@@ -67,7 +67,7 @@
 									<td th:text="${expense.owner.name}">Expense owner</td>
 									<td th:text="${expense.amount}">Expense amount</td>
 									<td>
-										<a class="text-decoration-none" th:href="@{/expense/{id}(id=${expense.id})}">
+										<a class="text-decoration-none" th:href="@{/updateexpense/{id}(id=${expense.id})}">
 											<button type="button" class="btn btn-labeled btn-primary">
 												<span class="btn-label"><i class="bi-binoculars-fill"></i></span></button>
 										</a>
