Added Mapper for expense, wide refactoring of unused methods

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -66,7 +66,7 @@
 								<td th:text="${expense.owner.name}">Expense owner</td>
 								<td th:text="${expense.amount}">Expense amount</td>
 								<td>
-									<a class="text-decoration-none" th:href="@{/expense/{id}(id=${expense.id})}">
+									<a class="text-decoration-none" th:href="@{/updateexpense/{id}(id=${expense.id})}">
 										<button type="button" class="btn btn-labeled btn-primary">
 											<span class="btn-label"><i class="bi-binoculars-fill"></i></span></button>
 									</a>
