Sticky footer+ add format email+ changement couleur creae expense list

--- a/src/main/resources/templates/contacts.html
+++ b/src/main/resources/templates/contacts.html
@@ -36,7 +36,7 @@
 				        <label>Email:</label>
 		    	    </div>
 		        	<div class="col">
-		        		<input name="email" class="form-control" type="text" th:field="*{email}">
+		        		<input name="email" class="form-control" type="text" th:field="*{email}" placeholder="email@domain.com" pattern="[a-zA-Z0-9._-]+@[a-zA-Z0-9._-]+.[a-zA-Z.]{2,15}">
 		        	</div>
 		        </div>
 		      </div>
@@ -128,7 +128,7 @@
 								<input class="d-none" type="number" name="id" th:value=${contact.id}>  
 						      <div class="modal-footer">
 						        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-						        <button type="submit" class="btn btn-warning" id="btnDelContactSave">Delete</button>
+						        <button type="submit" class="btn btn-danger" id="btnDelContactSave">Delete</button>
 						      </div>
 					      </form>
 					    </div>
