--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -4,7 +4,9 @@
   </head>
   <body>
     <footer class="footer" th:fragment="tail">
-      <p class="text-center text-warning text-bold"> Tricount Corporate<br> Wild code school 2021</p>
+      <div class="container">
+      <p class="text-center text-warning text-bold "> Tricount Corporate<br> Wild code school 2021</p>
+      </div>
       <script>
         function openNav() {
           document.getElementById("mySidenav").style.width = "15%";
