--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
 			<h1 class="text-center text-primary m-4">All shared expenses</h1>
 			<div class="text-center">
 				<a class="text-decoration-none" href="/createlist">
-					<button type="button" class="btn btn-labeled btn-rounded btn-success text-white" title="Create expense list">
+					<button type="button" class="btn btn-labeled btn-rounded btn-primary text-white" title="Create expense list">
 						<span class="btn-label"><i class="bi-plus-circle-fill"></i> Create a shared expense list</span>
 					</button>
 				</a>
