commit pour merge attention compile pas

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -90,7 +90,7 @@
 			</th:block>
 			<hr class="col-md-4 offset-md-4 border-2 border-top border-warning mt-3"><br />
 		</div>
-	</main>
+	</section>
 
 	<footer class="footer" th:replace="fragments/footer.html :: tail"></footer>
 	</body>
