--- a/src/main/resources/templates/balanceexpenses.html
+++ b/src/main/resources/templates/balanceexpenses.html
@@ -15,16 +15,16 @@
 				<div class="col"> 
 					<div class="row">
 						<div class = "col" ><b>Name</b></div>
-						<div class = "col" ><b>Amount due</b></div>
-						<div class = "col" ><b>Amount spent</b></div>
+						<div class = "col" ><b>Spent Amount</b></div>
+						<div class = "col" ><b>Balance</b></div>
 					</div>
 				</div>
 				<th:block th:each="contact, status : ${balExpenseDto.lstContacts}">
 				<div class="col">
 					<div class="row">
 						<div class = "col" th:text="${contact.name}">Name</div>
-						<div class = "col" th:text="${contact.amountDue}">Depenses beneficiaires</div>
 						<div class = "col" th:text="${contact.amountSpendHorsBalance}">Depenses faites</div>
+						<div class = "col" th:text="${contact.amountGiveOrTake}">Balance</div>
 					</div>
 				</div>
 				</th:block>
